Code-review: exceptions messages localization improvements

--- a/hw3/quiz-app/src/main/resources/i18n/messages_en_US.properties
+++ b/hw3/quiz-app/src/main/resources/i18n/messages_en_US.properties
@@ -10,6 +10,7 @@ numberFormatException=Wrong input number
 menuItemIndexOutOfBoundsException=Wrong option number
 menuCommandProcessorNotFound=Menu action handler is not found
 failedToParseQuizResource=Failed to parse quiz file source
+answerNumberOutOfRange=Given number of an answer is out of range
 
 firstNameQuizResultConverter = First Name
 lastNameQuizResultConverter = Last Name
